# xml-rs

./: .gitignore  Cargo.toml  Changelog.md  README.md
.github/: FUNDING.yml
.github/workflows/: main.yml
benches/: bench.rs
examples/: print_events.rs  rewrite.rs  xml-analyze.rs
src/: attribute.rs  common.rs  escape.rs  lib.rs  name.rs  namespace.rs  reader.rs  util.rs  writer.rs
src/reader/: config.rs  error.rs  events.rs  indexset.rs  lexer.rs  parser.rs
src/reader/parser/: inside_declaration.rs  inside_doctype.rs  inside_opening_tag.rs  inside_reference.rs
src/writer/: config.rs  emitter.rs  events.rs
tests/: errata4e.fail.txt  event_reader.rs  event_writer.rs  rmt-ns10.fail.txt  streaming.rs  sun-not-wf.fail.txt  version.rs  xmlconf.rs  xmltest.fail.txt
tests/documents/: sample_1_full.txt  sample_1_short.txt
